--- a/src/main/webapp/competitions.html
+++ b/src/main/webapp/competitions.html
@@ -22,10 +22,9 @@
 </head>
 
 <body>
-   <article class="container article" id="article">
-		
-	<div class="row" ng-app="cyclingResultsApp" ng-controller="competitionsListCtrl">
-		<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+   <article class="container article" id="article" ng-app="cyclingResultsApp" >
+	<div class="row" ng-controller="competitionsListCtrl">
+		<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" ng-show="verFiltro">
 			<div class="form-group">
 				<label for="initDate">InitDate:</label>
 				<input class="form-control" id="initDate" type = "text" ng-model = "filter.initDate">
@@ -38,6 +37,12 @@
 				<label for="gender">Gender:</label>
 				<select id="gender" class="form-control" ng-model="filter.genderID">
 					<option ng-repeat="g in genders" value="{{g.genderID}}">{{g.name}}</option>
+				</select>
+			</div>
+			<div class="form-group">
+				<label for="class">class:</label>
+				<select id="class" class="form-control" ng-model="filter.classID">
+					<option ng-repeat="c in classes" value="{{c.classID}}">{{c.name}}</option>
 				</select>
 			</div>
 			<div class="form-group">
@@ -55,51 +60,45 @@
 			</div>
 			<div class="form-group">
 				<button ng-click="getData()">getData</button>
+				&#160;&#160;
+				<button ng-click="loadCompetitions()">load competitions</button>
 			</div>
-			<table>
-				<tr ng-repeat="x in competitions">
-					 <td ng-if="$even">{{ x.initDate | date:'dd/MM/yyyy'}}</td>
-					<td ng-if="$odd" style="background-color:#f1f1f1">{{ x.initDate | date:'dd/MM/yyyy'}}</td>
-				    <td ng-if="$even">{{ x.name}}</td>
-					<td ng-if="$odd" style="background-color:#f1f1f1">{{ x.name}}</td>
-					<td ng-if="x.competitionType=='ONE_DAY'">
-						<button ng-click="getOneDayResults(x.name, x.competitionID, x.eventID, x.editionID, x.genderID, x.classID)">Resultados</button>
-					</td>
-					<td ng-if="x.competitionType=='STAGE_STAGES'">
-						<button ng-click="getStageResults(x.name, x.competitionID, x.eventID, x.editionID, x.genderID, x.classID, x.phase1ID)">Resultados</button>
-					</td>
-					<td ng-if="x.competitionType=='CLASSIFICATION_STAGES'">
-						<button ng-click="getClassification(x.name, x.competitionID, x.eventID, x.editionID, x.genderID, x.classID, x.phase1ID, x.phaseClassificationID)">Clasifica</button>
-					</td>
-					<td ng-if="x.competitionType=='STAGES'">
-						<button ng-click="getStages(x.name, x.competitionID, x.eventID, x.editionID, x.genderID, x.classID)">Detalle</button>
-					</td>
-				</tr>
-			</table>
 		</div>
-		<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-			<h2>{{competitionName}}</h2>
-			<!-- 
-			 <table>
+		<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" ng-show="verCompetis">
+			<button ng-click="showForm()">Ver filtro</button>
+			<table st-table="competitions" class="table table-striped">
 				<thead>
-					<tr><th>Rank</th><th>Rider</th></tr>
+					<tr>
+						<th>InitDate</th>
+						<th>Competition</th>
+						<th>Actions</th>
+					</tr>
 				</thead>
 				<tbody>
-					<tr ng-repeat="x in results">
-						<td ng-if="$even">{{ x.rank }}</td>
-						<td ng-if="$odd" style="background-color:#f0ffff">{{ x.rank}}</td>
-					    <td ng-if="$even">{{ x.name}}</td>
-						<td ng-if="$odd" style="background-color:#f0ffff">{{ x.name}}</td>
-						<td ng-if="$even">{{ x.team}} - {{x.nat}}</td>
-						<td ng-if="$odd" style="background-color:#f0ffff">{{ x.team}} - {{x.nat}}</td>
-					    <td ng-if="$even">{{ x.result}}</td>
-						<td ng-if="$odd" style="background-color:#f0ffff">{{ x.result}}</td>
+					<tr ng-repeat="x in competitions">
+						<td>{{ x.initDate | date:'dd/MM/yyyy'}}</td>
+						<td>{{x.name}}</td>
+						<td ng-if="x.competitionType=='ONE_DAY'">
+							<button ng-click="getOneDayResults(x.name, x.competitionID, x.eventID, x.editionID, x.genderID, x.classID)">Resultados</button>
+						</td>
+						<td ng-if="x.competitionType=='STAGE_STAGES'">
+							<button ng-click="getStageResults(x.name, x.competitionID, x.eventID, x.editionID, x.genderID, x.classID, x.phase1ID)">Resultados</button>
+						</td>
+						<td ng-if="x.competitionType=='CLASSIFICATION_STAGES'">
+							<button ng-click="getClassification(x.name, x.competitionID, x.eventID, x.editionID, x.genderID, x.classID, x.phase1ID, x.phaseClassificationID)">Clasifica</button>
+						</td>
+						<td ng-if="x.competitionType=='STAGES'">
+							<button ng-click="getStages(x.name, x.competitionID, x.eventID, x.editionID, x.genderID, x.classID)">Detalle</button>
+						</td>
 					</tr>
 				</tbody>
-			</table>		
-			 -->
-			
-			
+			</table>
+		</div>
+		<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" ng-show="verResults">
+			<h2>{{competitionName}}</h2>
+			<button ng-click="showCompetitions()">Ver competiciones</button>
+			&#160;&#160;
+			<button ng-click="showForm()">Ver filtro</button>
 			<table st-table="results" class="table table-striped">
 				<thead>
 				<tr>
